--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prettier": "^2.0.4"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.13",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
