--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.9.13",
+    "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.9.13",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
