--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "parcel src/index.html",
     "format": "prettier \"src/**/*.{js,html}\" --write",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "parcel build src/index.html -d build --public-url ./"
   },
   "browserslist": [
     "last 2 Chrome versions"
