--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "npm run dev",
     "format": "prettier \"src/**/*.{js,html}\" --write",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "concurrently \"npm run dev\" \"node server.js\""
   },
   "browserslist": [
     "last 2 Chrome versions"
@@ -29,7 +30,11 @@
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.9.13",
+    "@reach/router": "^1.3.4",
+    "concurrently": "^5.2.0",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^1.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
