--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kindergarten_guri",
+  "name": "kinderguri",
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
@@ -8,8 +8,7 @@
     "start": "npm run dev",
     "format": "prettier \"src/**/*.{js,html}\" --write",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "concurrently \"npm run dev\" \"node server.js\""
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "browserslist": [
     "last 2 Chrome versions"
@@ -23,7 +22,6 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
-    "parcel-bundler": "^1.12.4",
     "prettier": "^2.0.4"
   },
   "dependencies": {
@@ -31,9 +29,8 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.9.13",
     "@reach/router": "^1.3.4",
-    "concurrently": "^5.2.0",
+    "axios": "^0.20.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
