--- a/package.json
+++ b/package.json
@@ -1,39 +1,15 @@
 {
-  "name": "kinderguri",
+  "name": "kinderguri_server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.html",
+  "main": "index.js",
   "scripts": {
-    "dev": "parcel src/index.html",
-    "start": "npm run dev",
-    "format": "prettier \"src/**/*.{js,html}\" --write",
-    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
-  "browserslist": [
-    "last 2 Chrome versions"
-  ],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-transform-runtime": "^7.9.0",
-    "babel-eslint": "^10.1.0",
-    "cssnano": "^4.1.10",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.22.0",
-    "prettier": "^2.0.4"
-  },
   "dependencies": {
-    "@material-ui/core": "^4.9.13",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/styles": "^4.9.13",
-    "@reach/router": "^1.3.4",
-    "axios": "^0.21.1",
-    "dotenv": "^8.2.0",
-    "http-proxy-middleware": "^1.0.5",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "express": "^4.17.1"
   }
 }
