--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^12.12.14",
+    "@types/reach__router": "^1.2.6",
+    "@types/react": "^16.9.15",
+    "@types/react-dom": "^16.9.4",
     "@babel/core": "^7.13.10",
     "@babel/plugin-transform-runtime": "^7.13.10",
     "babel-eslint": "^10.1.0",
@@ -23,15 +27,18 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.22.0",
-    "prettier": "^2.0.4"
+    "prettier": "^2.0.4",
+    "typescript": "^3.7.3"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.12",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.11.3",
     "@reach/router": "^1.3.4",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
+    "graphql": "^14.4.2",
     "http-proxy-middleware": "^1.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
