--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.12",
+    "@emotion/react": "^11.1.5",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.11.3",
