--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,17 +16,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.13.10",
+    "@babel/plugin-transform-runtime": "^7.13.10",
     "@types/node": "^12.12.14",
     "@types/reach__router": "^1.2.6",
     "@types/react": "^16.9.15",
     "@types/react-dom": "^16.9.4",
-    "@babel/core": "^7.13.10",
-    "@babel/plugin-transform-runtime": "^7.13.10",
     "babel-eslint": "^10.1.0",
     "cssnano": "^4.1.10",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.22.0",
+    "posthtml-expressions": "^1.7.1",
     "prettier": "^2.0.4",
     "typescript": "^3.7.3"
   },
