--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^16.9.15",
     "@types/react-dom": "^16.9.4",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-emotion": "^11.0.0",
     "cssnano": "^4.1.10",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -34,6 +35,8 @@
   "dependencies": {
     "@apollo/client": "^3.3.12",
     "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "@emotion/styled-base": "^11.0.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.11.3",
@@ -43,6 +46,7 @@
     "graphql": "^14.4.2",
     "http-proxy-middleware": "^1.0.5",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-loader-spinner": "^4.0.0"
   }
 }
