--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,6 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.22.0",
-    "posthtml-expressions": "^1.7.1",
     "prettier": "^2.0.4",
     "typescript": "^3.7.3"
   },
@@ -38,9 +37,6 @@
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "@emotion/styled-base": "^11.0.0",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/styles": "^4.11.3",
     "@reach/router": "^1.3.4",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
@@ -48,7 +44,6 @@
     "http-proxy-middleware": "^1.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-loader-spinner": "^4.0.0",
-    "react-modal": "^3.12.1"
+    "react-loader-spinner": "^4.0.0"
   }
 }
