--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "build": "cd frontend && npm run build"
+    "build": "pm2 start src/index.js -i 0"
   },
   "author": "",
   "license": "ISC",
@@ -19,7 +19,8 @@
     "dotenv": "^8.2.0",
     "eslint-plugin-graphql": "^4.0.0",
     "express": "^4.17.1",
-    "graphql": "^15.5.0"
+    "graphql": "^15.5.0",
+    "pm2": "^4.5.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
