Add: Set config files to deploy from netlify

--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js",
+    "start": "cd frontend & npm run dev",
+    "start:lambda": "netlify-lambda serve src/lambda",
     "dev": "nodemon src/index.js",
-    "build": "pm2 start src/index.js -i 0"
+    "build": "cd frontend & npm run build",
+    "build:lambda": "netlify-lambda build src/lambda"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +18,7 @@
     "apollo-datasource-rest": "^0.10.0",
     "apollo-server": "^2.21.2",
     "apollo-server-express": "^2.21.2",
+    "apollo-server-lambda": "^2.22.2",
     "dotenv": "^8.2.0",
     "eslint-plugin-graphql": "^4.0.0",
     "express": "^4.17.1",
@@ -23,6 +26,7 @@
     "pm2": "^4.5.6"
   },
   "devDependencies": {
+    "netlify-lambda": "^2.0.3",
     "nodemon": "^2.0.7"
   }
 }
