--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,32 +17,33 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/plugin-transform-runtime": "^7.13.10",
-    "@types/node": "^12.12.14",
+    "@babel/core": "^7.13.15",
+    "@babel/plugin-transform-runtime": "^7.13.15",
+    "@types/node": "^12.20.7",
     "@types/reach__router": "^1.2.6",
     "@types/react": "^16.9.15",
-    "@types/react-dom": "^16.9.4",
+    "@types/react-dom": "^16.9.12",
     "@types/react-modal": "^3.12.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-emotion": "^11.0.0",
-    "cssnano": "^4.1.10",
+    "cssnano": "^4.1.11",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react": "^7.23.2",
     "prettier": "^2.0.4",
     "typescript": "^3.7.3"
   },
   "dependencies": {
-    "@apollo/client": "^3.3.12",
+    "@apollo/client": "^3.3.14",
     "@emotion/react": "^11.1.5",
-    "@emotion/styled": "^11.1.5",
+    "@emotion/styled": "^11.3.0",
     "@emotion/styled-base": "^11.0.0",
     "@reach/router": "^1.3.4",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
+    "encoding": "^0.1.13",
     "graphql": "^14.4.2",
-    "http-proxy-middleware": "^1.0.5",
+    "http-proxy-middleware": "^1.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-loader-spinner": "^4.0.0"
