--- a/package.json
+++ b/package.json
@@ -16,14 +16,12 @@
   "type": "module",
   "dependencies": {
     "apollo-datasource-rest": "^0.10.0",
-    "apollo-server": "^2.21.2",
-    "apollo-server-express": "^2.21.2",
+    "apollo-server": "^2.22.2",
     "apollo-server-lambda": "^2.22.2",
     "dotenv": "^8.2.0",
+    "encoding": "^0.1.13",
     "eslint-plugin-graphql": "^4.0.0",
-    "express": "^4.17.1",
-    "graphql": "^15.5.0",
-    "pm2": "^4.5.6"
+    "graphql": "^15.5.0"
   },
   "devDependencies": {
     "netlify-lambda": "^2.0.3",
