--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd frontend & npm run dev",
-    "start:lambda": "netlify-lambda serve src/lambda",
     "dev": "nodemon src/index.js",
-    "build": "cd frontend & npm run build",
+    "start": "cd frontend && npm run dev",
+    "start:lambda": "netlify-lambda serve src/lambda",
+    "build": "run-p build:**",
+    "build:app": "cd frontend && npm run build",
     "build:lambda": "netlify-lambda build src/lambda"
   },
   "author": "",
@@ -21,7 +22,8 @@
     "dotenv": "^8.2.0",
     "encoding": "^0.1.13",
     "eslint-plugin-graphql": "^4.0.0",
-    "graphql": "^15.5.0"
+    "graphql": "^15.5.0",
+    "npm-run-all": "^4.1.5"
   },
   "devDependencies": {
     "netlify-lambda": "^2.0.3",
